--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<p>Much to our surprise, when about two miles outside Seefeld, we met our fellow-passenger by the Ceres, him with whom we had lunched at Thorshavn on the outward journey. We had left him behind at that port, and he had intended to stay for several weeks at the Faroes and to return thence to England; but having found things rather slow there, he had followed us to Iceland by the next steamer; hence the meeting on the road.</p>
 				<p>We created some sort of sensation as we entered the capital of Iceland. The clocks were striking ten as we clattered down the long main street; it was a time when the populace were at leisure and on the street, and they evinced no little curiosity as we rode by them. They were congregated in small groups, and it was evident to us that we were being discussed—and no wonder, for we were a motley-looking cavalcade! We must have presented a very grotesque appearance, clad as we were in oilskins, and covered with mud from head to foot: it had been raining at intervals on the way, and we had had a rather disagreeable journey. </p>
 				<figure>
-					<img class="js-image" data-pos="0.25" src="img/journey/1.jpeg" />
+					<img class="js-image" data-pos="0.25" src="img/journey/1.jpg" />
 					<figcaption>The beautiful Seekirchl from Seefeld</figcaption>
 				</figure>
 				<p>We caught glimpses of faces at most of the windows peering curiously at us and watching our progress through the town. Many of the members of the groups, by the wayside saluted as we passed by—the Icelanders are a polite people, as a rule, and they doff their head-gear in salutation to strangers. So we progressed, being saluted, and acknowledging the salutes. It was a sort of triumphal entry, for the news had been carried forward by one of the guides, who was some little distance ahead with some of the pack-ponies, that we had just crossed the country by way of the uninhabited interior. All things come to an end, and so did our journey when we reached the end of the main street in Seefeld, for there, at a great wooden building four stories high, we took up our quarters, and the crossing of Iceland was an accomplished fact.</p>
@@ -43,7 +43,7 @@
 				<h2><span class="title-up">The journey continues</span><span class="title-down">Feeling the silence </span></h2>
 				<p></p>
 				<figure>
-					<img class="js-image" data-pos="0.6" src="img/journey/2.jpeg" />
+					<img class="js-image" data-pos="0.6" src="img/journey/2.jpg" />
 					<figcaption>The Crossroads - the perfect place to connect to the nature</figcaption>
 				</figure>
 				<p></p>
@@ -53,8 +53,8 @@
 				<p></p>
 				<figure>
 					<div class="js-gallery-content">
-						<img src="img/journey/3.jpeg" />
-						<img src="img/journey/4.jpeg" />
+						<img src="img/journey/3.jpg" />
+						<img src="img/journey/4.jpg" />
 					</div>
 					<figcaption>An unexpected turn in our journey led us to many impressive places.</figcaption>
 				</figure>
@@ -67,7 +67,7 @@
 				</p>
 				<p></p>
 				<figure>
-					<img class="js-image" data-pos="0.6" src="img/journey/5.jpeg" />
+					<img class="js-image" data-pos="0.6" src="img/journey/5.jpg" />
 					<figcaption>I was the geographer, whose mission it was to make a map of a small portion of the country traversed.</figcaption>
 				</figure>
 				<p></p>
@@ -76,7 +76,7 @@
 				<h2><span class="title-up">Seefeld by the river</span><span class="title-down">Sheer Faces of Rock</span></h2>
 				<p></p>
 				<figure>
-					<img class="js-image" data-pos="0.6" src="img/journey/2.jpeg"/>
+					<img class="js-image" data-pos="0.6" src="img/journey/2.jpg"/>
 					<figcaption>At once the music of the steam-whistle was resumed, and our ears were again tortured by its shrill blasts.</figcaption>
 				</figure>
 				<p></p>
@@ -93,7 +93,7 @@
 				<h2><span class="title-up">The taste of success</span><span class="title-down">The Final Destination</span></h2>
 				<p></p>
 				<figure>
-					<img src="img/journey/1.jpeg" />
+					<img src="img/journey/1.jpg" />
 					<figcaption>I had come to this part of the country intending to make a quick survey of it as we traversed it from end to end.</figcaption>
 				</figure>
 				<p></p>
