--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<h2><span class="title-up">Gullfoss</span><span class="title-down">Above the Clouds</span></h2>
 				<p></p>
 				<figure>
-					<img src="img/journey/6.jpeg" />
+					<img src="img/journey/6.jpg" />
 					<figcaption>Farther on there were many evidences of ice-action: the rounded forms of boulders attracted our attention, as did numerous ice-scratchings on them; some of the outcropping lumps were beautifully rounded.</figcaption>
 				</figure>
 			</section>
